Add antd, navbar, home page

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,1 +1,30 @@
 /* Fill me in :) */
+
+h1 {
+  font-size: 32pt;
+  text-align: center;
+}
+
+.Home-about-container {
+  justify-content: center;
+  display: flex;
+}
+
+.Home-about {
+  font-size: 14pt;
+  padding: var(--s);
+  border: 1px solid var(--darkgrey);
+  max-width: 800px;
+}
+
+.Home-container {
+  margin-top: var(--l);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.Home-container .Home-card {
+  margin: var(--m);
+  max-width: 400px;
+}
