--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -5,6 +5,7 @@
   --medgrey: #e0e0e0;
   --grey: #f7f7f7;
   --white: #fff;
+  --bg: #f0f2f5;
 
   --xs: 4px;
   --s: 8px;
@@ -12,12 +13,16 @@
   --l: 24px;
 }
 
+html body {
+  background-color: var(--bg);
+}
+
 form {
   flex-grow: 1;
 }
 
 .content {
-  padding: 0 50px;
+  padding: 24px 48px;
 }
 
 .u-flex {
