Allow pooling access only to designated poolers

--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -1,5 +1,7 @@
 .Navbar-avatar {
   float: right;
+
+  /* todo: eventually pfp will be clickable to show registration status, etc */
   cursor: default !important;
 }
 
