Add config file for gts homepage

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -15,6 +15,10 @@
   max-width: 800px;
 }
 
+.Home-about p {
+  margin-bottom: 0;
+}
+
 .Home-container {
   margin-top: var(--l);
   display: flex;
