--- a/client/src/components/pages/Mappools.css
+++ b/client/src/components/pages/Mappools.css
@@ -2,3 +2,14 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.Mappools-pack {
+  margin-top: var(--m);
+  border: 1px solid black;
+  text-align: center;
+  padding: var(--xs);
+}
+
+.Mappools-settings {
+  margin-left: var(--l);
+}
