--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -8,3 +8,10 @@
   border-radius: 50%;
   filter: drop-shadow(1px 1px 1px black);
 }
+
+.Navbar-Logo {
+  width: 48px;
+  height: 48px;
+  margin: 8px 16px 8px -12px;
+  float: left;
+}
