Track registration times, add filtering panel in player page

--- a/client/src/components/pages/Players.css
+++ b/client/src/components/pages/Players.css
@@ -12,3 +12,15 @@
 .Players-name img {
   margin-right: 3px;
 }
+
+.Players-sort {
+  font-size: 12pt;
+  font-weight: bold;
+  margin-right: var(--s);
+}
+
+.Players-topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
