Add rank refresh button

--- a/client/src/components/pages/Players.css
+++ b/client/src/components/pages/Players.css
@@ -24,3 +24,13 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.Players-admintool {
+  margin: var(--m);
+  display: flex;
+}
+
+.Players-progress {
+  margin-left: var(--m);
+  width: 200px;
+}
