Allow non-team tourneys to have group stage

--- a/client/src/components/modules/UserCard.css
+++ b/client/src/components/modules/UserCard.css
@@ -5,8 +5,11 @@
   grid-template-rows: 60px;
   background-color: white;
   box-shadow: 2px 2px 8px;
-  width: 412px;
   margin: var(--s);
+}
+
+.UserCard-wide {
+  grid-template-columns: 60px 440px;
 }
 
 .UserCard-avatar {
