Support half time in pools

--- a/client/src/components/modules/MapCard.css
+++ b/client/src/components/modules/MapCard.css
@@ -86,6 +86,10 @@
   background-color: rgb(255, 182, 153);
 }
 
+.mod-HT {
+  background-color: rgb(250, 162, 213);
+}
+
 .mod-TB {
   background-color: rgb(126, 171, 255);
 }
