Add support for HDHR

--- a/client/src/components/modules/MapCard.css
+++ b/client/src/components/modules/MapCard.css
@@ -90,6 +90,10 @@
   background-color: rgb(250, 162, 213);
 }
 
+.mod-HDHR {
+  background-color: rgb(158, 240, 165);
+}
+
 .mod-TB {
   background-color: rgb(126, 171, 255);
 }
