Add mod types EZ, CV, EX

--- a/client/src/components/modules/MapCard.css
+++ b/client/src/components/modules/MapCard.css
@@ -94,6 +94,18 @@
   background-color: rgb(158, 240, 165);
 }
 
+.mod-EZ {
+  background-color: rgb(36, 149, 64);
+}
+
+.mod-CV {
+  background-color: rgb(136, 89, 44);
+}
+
+.mod-EX {
+  background-color: rgb(27, 27, 27);
+}
+
 .mod-TB {
   background-color: rgb(126, 171, 255);
 }
