add some stuff to stats page requested by briesmas
- display flags
- determine seed and color rows (only for qualifiers stage)
- add avg rank columns
- add avg scores per map

--- a/client/src/components/pages/Stats.css
+++ b/client/src/components/pages/Stats.css
@@ -21,3 +21,18 @@
   margin-right: var(--m);
 }
 
+.seed-1 {
+  background-color: #f4cccc;
+}
+
+.seed-2 {
+  background-color: #fff2cc;
+}
+
+.seed-3 {
+  background-color: #d9ead3;
+}
+
+.seed-4 {
+  background-color: #cfe2f3;
+}
