Color adjustments to fit figma, fix tourney page navigation

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -35,8 +35,8 @@ body .Home-content {
 }
 
 .Home-container {
-  margin-top: var(--l);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: #2E3135;
 }
