Implement staff and helper csv export

--- a/client/src/components/pages/TourneyStaff.css
+++ b/client/src/components/pages/TourneyStaff.css
@@ -1,3 +1,13 @@
+.Staffs-admintool {
+  margin: var(--m) 0;
+  display: flex;
+}
+
+.Staffs-admintool > * {
+  margin: 0 var(--s);
+  display: flex;
+}
+
 .TourneyStaff-container {
   display: flex;
   flex-wrap: wrap;
