dark themed pages using customized antd less theme
notes:
- I needed to upgrade webpack to v5 in order to install and use less and less-loader
- also needed to upgrade antd a little bit for some reason
- most theme colors are now specified in App.less, while some more specific colors are just specified as usual in the component css files

--- a/client/src/components/modules/TeamCard.css
+++ b/client/src/components/modules/TeamCard.css
@@ -1,14 +1,14 @@
 .TeamCard-container {
-  border: 2px solid rgb(119, 119, 119);
+  border: 1px solid black;
   margin: var(--m);
-  box-shadow: 2px 2px 8px;
+  box-shadow: 2px 2px 8px black;
   display: flex;
 }
 
 .TeamCard-seed {
   margin: var(--xs);
   width: var(--xs);
-  box-shadow: 1px 1px 4px;
+  box-shadow: 1px 1px 4px black;
 }
 
 .TeamCard-head-wrapper {
