--- a/client/src/components/pages/Stats.css
+++ b/client/src/components/pages/Stats.css
@@ -26,17 +26,17 @@
 }
 
 .seed-1 {
-  background-color: #f4cccc;
+  background-color: #663333;
 }
 
 .seed-2 {
-  background-color: #fff2cc;
+  background-color: #807040;
 }
 
 .seed-3 {
-  background-color: #d9ead3;
+  background-color: #3b4f31;
 }
 
 .seed-4 {
-  background-color: #cfe2f3;
+  background-color: #364d63;
 }
