--- a/client/src/components/modules/MapCard.css
+++ b/client/src/components/modules/MapCard.css
@@ -2,7 +2,7 @@
   margin: var(--m);
   max-width: 600px;
   flex-basis: 400px;
-  box-shadow: 0 0 12px;
+  box-shadow: 0 0 12px black;
 }
 
 .MapCard-card a img {
@@ -49,7 +49,6 @@
 
 .MapCard-primary {
   font-size: 16pt;
-  color: rgb(47, 47, 47);
 }
 
 .MapCard-divider {
