--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -8,6 +8,7 @@ body .Home-content {
   line-height: 1;
   margin-bottom: 0;
   text-transform: uppercase;
+  color: var(--night);
 }
 
 .Home-about-container {
@@ -28,6 +29,7 @@ body .Home-content {
   align-items: center;
   height: 350px;
   background: #E5E5E5;
+  color: var(--onyx);
 }
 
 .Home-about p {
@@ -38,5 +40,5 @@ body .Home-content {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #2E3135;
+  background-color: var(--night);
 }
