--- a/client/src/global.css
+++ b/client/src/global.css
@@ -127,3 +127,11 @@ body .ant-card-bordered .ant-card-cover {
 .u-add-tag {
   background: var(--darknight) !important;
 }
+
+body .ant-layout-content {
+  margin-top: 48px;
+}
+
+body .u-flex {
+  margin-top: var(--l);
+}
