--- a/client/src/global.css
+++ b/client/src/global.css
@@ -125,5 +125,5 @@ body .ant-card-bordered .ant-card-cover {
 }
 
 .u-add-tag {
-  background: var(--darknight) !important;
+  background: var(--night) !important;
 }
