--- a/client/src/components/modules/TourneyCard.css
+++ b/client/src/components/modules/TourneyCard.css
@@ -10,11 +10,13 @@
   font-size: 24px;
   text-align: left;
   align-self: flex-start;
+  animation: fadein 0.25s ease-in;
 }
 
 .content .TourneyCard-card .TourneyCard-description {
   font-size: 14px;
   color: white;
+  animation: fadein 0.25s ease-in;
 }
 
 .content .TourneyCard-card {
@@ -40,4 +42,9 @@
   transition-timing-function: ease-out;
   flex-grow: 5;
   flex-shrink: 0;
+}
+
+@keyframes fadein {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
