--- a/client/src/global.css
+++ b/client/src/global.css
@@ -124,6 +124,15 @@ body .ant-card-bordered .ant-card-cover {
   margin-right: unset;
 }
 
+body .ant-menu-item.ant-menu-item-selected {
+  color: var(--white);
+}
+
+body .ant-menu-item.ant-menu-item-selected:hover {
+  color: var(--white);
+}
+
+
 .u-add-tag {
   background: var(--night) !important;
 }
