--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -54,8 +54,10 @@ header.Navbar-wrapper .ant-menu-submenu .ant-menu-submenu-title {
   text-transform: uppercase;
 }
 
-header.Navbar-wrapper .ant-menu-dark.ant-menu-horizontal > .ant-menu-item {
-  padding: 0 40px;
+@media (min-width: 1500px) {
+  header.Navbar-wrapper .ant-menu-dark.ant-menu-horizontal > .ant-menu-item {
+    padding: 0 40px;
+  }
 }
 
 
