Various adjustments to new theme

--- a/client/src/components/App.less
+++ b/client/src/components/App.less
@@ -5,6 +5,7 @@
 @greyts: #b5c8d6;
 @onyxdark: #31373f;
 @darknight: #2e3135;
+@darkernight: #131415;
 @purewhite: #ffffff;
 
 @primary-color: @gtsorange;
@@ -17,10 +18,10 @@
 @heading-color: @purewhite;
 @background-color-light: @darknight;
 @icon-color: @purewhite;
-@border-color-base: @greyts;
-@border-color-split: black;
+@border-color-base: @darkernight;
+@border-color-split: @darkernight;
 @item-hover-bg: @greyts;
 @disabled-bg: @onyxdark;
-@disabled-color: black;
+@disabled-color: @darkernight;
 @btn-disable-color: @greyts;
 @select-selection-item-bg: @onyxdark;
