--- a/client/src/components/modules/UserCard.css
+++ b/client/src/components/modules/UserCard.css
@@ -1,9 +1,9 @@
 .UserCard-outside {
-  border: 1px solid black;
+  border: 1px solid var(--darker-night);
   display: grid;
   grid-template-columns: 75px 350px;
   grid-template-rows: 75px;
-  box-shadow: 2px 2px 8px black;
+  box-shadow: 2px 2px 8px var(--darker-night);
   width: 428px;
   margin: var(--s);
 }
