--- a/client/src/components/modules/TeamCard.css
+++ b/client/src/components/modules/TeamCard.css
@@ -1,14 +1,14 @@
 .TeamCard-container {
-  border: 1px solid black;
+  border: 1px solid var(--darker-night);
   margin: var(--m);
-  box-shadow: 2px 2px 8px black;
+  box-shadow: 2px 2px 8px var(--darker-night);
   display: flex;
 }
 
 .TeamCard-seed {
   margin: var(--xs);
   width: var(--xs);
-  box-shadow: 1px 1px 4px black;
+  box-shadow: 1px 1px 4px var(--darker-night);
 }
 
 .TeamCard-head-wrapper {
