--- a/client/src/components/App.less
+++ b/client/src/components/App.less
@@ -18,7 +18,7 @@
 @heading-color: @purewhite;
 @background-color-light: @darknight;
 @icon-color: @purewhite;
-@border-color-base: @darkernight;
+@border-color-base: @greyts;
 @border-color-split: @darkernight;
 @item-hover-bg: @greyts;
 @disabled-bg: @onyxdark;
