--- a/client/src/components/pages/home/Home.css
+++ b/client/src/components/pages/home/Home.css
@@ -52,3 +52,13 @@ body .Home-content {
 .Home-container > .ant-row > .ant-col {
   display: flex;
 }
+
+.Home-socials-container {
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+  background-color: transparent;
+  margin: var(--m);
+  margin-top: var(--s);
+  gap: var(--m);
+}
