--- a/client/src/components/pages/home/PastTournies.css
+++ b/client/src/components/pages/home/PastTournies.css
@@ -1,9 +1,17 @@
 .PastTournies-title {
-  font-size: 35px;
+  font-size: 28px;
+  text-align: center;
 }
 
 .PastTournies-container {
   margin: var(--m);
   padding: 34px;
   background-color: var(--onyx);
+}
+
+@media (min-width: 1280px) {
+  .PastTournies-title {
+    font-size: 35px;
+    text-align: left;
+  }
 }
