--- a/client/src/components/pages/home/PastTourneyCard.css
+++ b/client/src/components/pages/home/PastTourneyCard.css
@@ -4,13 +4,13 @@
   margin-bottom: var(--m);
   display: flex;
   flex-direction: row;
-  height: 205px;
+  height: 113px;
 }
 
 /* Needs the extra specificity to override img.ant-image-img */
 img.PastTourneyCard-thumbnail {
-  width: 485px;
-  height: 205px;
+  width: 156px;
+  height: 113px;
 }
 
 .PastTourneyCard-text-container {
@@ -18,24 +18,48 @@ img.PastTourneyCard-thumbnail {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding-left: 52px;
-  padding-right: 52px;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .PastTourneyCard-title {
   font-family: Red Hat Display;
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 53px;
+  font-size: 15px;
+  line-height: 1.2;
   letter-spacing: 0em;
   text-align: left;
 }
 
-.PastTourneyCard-description {
+div.ant-typography.PastTourneyCard-description {
   font-family: Red Hat Display;
-  font-size: 20px;
+  font-size: 12px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 1.3;
   letter-spacing: 0em;
   text-align: left;
+  margin-bottom: 0px;
+}
+
+@media (min-width: 1280px) {
+  .PastTourneyCard-container {
+    height: 205px;
+  }
+
+  .PastTourneyCard-text-container {
+    padding-left: 52px;
+    padding-right: 52px;
+  }
+
+  img.PastTourneyCard-thumbnail {
+    width: 485px;
+    height: 205px;
+  }
+
+  .PastTourneyCard-title {
+    font-size: 40px;
+  }
+
+  div.ant-typography.PastTourneyCard-description {
+    font-size: 20px;
+  }
 }
