--- a/client/src/components/pages/home/TourneyCard.css
+++ b/client/src/components/pages/home/TourneyCard.css
@@ -11,15 +11,31 @@
   margin: 0px;
   backdrop-filter: blur(100px);
   display: flex;
+  flex-direction: column;
 }
 
 .TourneyCard-content {
   margin: 48px;
+  width: auto;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: flex-start;
 }
 
 .TourneyCard-banner {
   width: 100%;
   height: 290px;
+  flex-grow: 0;
+}
+
+.TourneyCard-title {
+  font-size: 33px;
+  font-style: italic;
+  font-weight: 900;
+  line-height: 0.9;
+  margin-bottom: var(--s);
 }
 
 .TourneyCard-description {
@@ -27,6 +43,7 @@
   font-weight: 500;
   margin: 0px;
   line-height: 1.1;
+  flex-grow: 1;
 }
 
 .TourneyCard-container .ant-btn {
@@ -37,11 +54,68 @@
   line-height: 1.5;
 }
 
-@keyframes fadein {
-  0% {
-    opacity: 0;
+/* Large screens */
+@media (min-width: 1280px) {
+  .TourneyCard-container.ongoing {
+    flex-direction: row-reverse;
   }
-  100% {
-    opacity: 1;
+
+  .TourneyCard-banner.ongoing {
+    /* 100px here is just to allow flexgrow to work, perhaps there's a better way? */
+    width: 100px;
+    height: auto;
+    flex-grow: 0.7;
+  }
+
+  .TourneyCard-content.ongoing {
+    width: 100px;
+    flex-grow: 0.3;
+  }
+
+  .TourneyCard-title.ongoing {
+    font-size: 40px;
+  }
+
+  .TourneyCard-description.ongoing {
+    font-size: 24px;
+  }
+}
+
+/* Small screens */
+@media (max-width: 720px) {
+  .TourneyCard-card {
+    margin: 0px;
+  }
+
+  .TourneyCard-banner.ongoing {
+    height: 211px;
+  }
+
+  .TourneyCard-banner {
+    height: 113px;
+  }
+
+  .TourneyCard-content {
+    margin: 30px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .TourneyCard-title {
+    font-size: 21px;
+    text-align: center;
+  }
+
+  .TourneyCard-title.ongoing {
+    font-size: 25px;
+  }
+
+  .TourneyCard-description {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .TourneyCard-description.ongoing {
+    font-size: 16px;
   }
 }
