adding FL :trol:

--- a/client/src/components/modules/MapCard.css
+++ b/client/src/components/modules/MapCard.css
@@ -107,6 +107,10 @@
   background-color: rgb(36, 149, 64);
 }
 
+.mod-FL {
+  background-color: rgb(96, 96, 96);
+}
+
 .mod-CV {
   background-color: rgb(136, 89, 44);
 }
