--- a/client/src/components/pages/home/PastTourneyCard.css
+++ b/client/src/components/pages/home/PastTourneyCard.css
@@ -4,13 +4,14 @@
   margin-bottom: var(--m);
   display: flex;
   flex-direction: row;
-  height: 113px;
+  height: 90px;
+  overflow: hidden;
 }
 
 /* Needs the extra specificity to override img.ant-image-img */
 img.PastTourneyCard-thumbnail {
-  width: 156px;
-  height: 113px;
+  width: 135px;
+  height: 90px;
 }
 
 .PastTourneyCard-text-container {
@@ -24,7 +25,7 @@ img.PastTourneyCard-thumbnail {
 
 .PastTourneyCard-title {
   font-family: Red Hat Display;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0em;
   text-align: left;
@@ -32,7 +33,7 @@ img.PastTourneyCard-thumbnail {
 
 div.ant-typography.PastTourneyCard-description {
   font-family: Red Hat Display;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 400;
   line-height: 1.3;
   letter-spacing: 0em;
