--- a/client/src/global.css
+++ b/client/src/global.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700;1,900&display=swap");
 
 :root {
+  --gts-orange-light: #f97d35;
   --gts-orange: #f75c03;
+  --gts-orange-dark: #943702;
   --greyts: #b5c8d6;
+  --greyts-lighter: rgb(206, 219, 228);
   --onyx: #31373f;
   --night: #2e3135;
   --white: #fff;
@@ -11,10 +14,8 @@
   --darker-night: rgb(19, 20, 21);
   --dark-night: rgb(41, 45, 50);
   --onyx-dark: rgb(49, 55, 63);
-  --greyts: rgb(181, 200, 214);
-  --greyts-lighter: rgb(206, 219, 228);
+
   --full-white: rgb(255, 255, 255);
-  --gts-orange: rgb(247, 92, 3);
   --onyx-light: rgb(56, 66, 79);
 
   --xs: 4px;
