--- a/client/src/components/pages/home/HomeBanner.css
+++ b/client/src/components/pages/home/HomeBanner.css
@@ -89,6 +89,7 @@
   transform: perspective(100vw) rotateX(25deg);
   border-radius: 4px;
   width: 90%;
+  aspect-ratio: 16 / 9;
 }
 
 .HomeBanner-login-buttons-container {
