--- a/client/src/components/modules/AddTag.css
+++ b/client/src/components/modules/AddTag.css
@@ -1,5 +1,4 @@
 .u-add-tag {
-  background: #fff !important;
-  border-style: dashed !important;
-  cursor: pointer !important;
+  border-style: dashed;
+  cursor: pointer;
 }
